--- a/love-test/index.html
+++ b/love-test/index.html
@@ -476,19 +476,31 @@
                     <h4>🔗 결과 공유하기</h4>
                     <div class="share-buttons">
                         <button class="share-btn kakao" onclick="share('kakao')">
-                            <span>💬</span>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                <circle cx="12" cy="12" r="11" fill="#FFE812"/>
+                                <path d="M12 6C8.134 6 5 8.462 5 11.5C5 13.382 6.236 15.031 8.125 16.031L7.5 18.5L10.234 16.813C10.813 16.938 11.406 17 12 17C15.866 17 19 14.538 19 11.5C19 8.462 15.866 6 12 6Z" fill="#3C1E1E"/>
+                            </svg>
                             <span>카카오톡</span>
                         </button>
                         <button class="share-btn facebook" onclick="share('facebook')">
-                            <span>📘</span>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                <circle cx="12" cy="12" r="11" fill="#1877F2"/>
+                                <path d="M15.5 12.75H13.5V19H10.5V12.75H9V10.25H10.5V8.5C10.5 6.5 11.5 5.5 13.5 5.5H15.5V8H14C13.5 8 13.5 8.25 13.5 8.75V10.25H15.5L15.5 12.75Z" fill="white"/>
+                            </svg>
                             <span>페이스북</span>
                         </button>
                         <button class="share-btn twitter" onclick="share('twitter')">
-                            <span>🐦</span>
-                            <span>트위터</span>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                <circle cx="12" cy="12" r="11" fill="#000000"/>
+                                <path d="M13.5 10.5L17.5 6H16.5L13 9.88L10.25 6H7L11.19 12.34L7 17H8L11.69 12.91L14.75 17H18L13.5 10.5ZM12.19 12.29L11.78 11.72L8.34 6.64H9.82L12.57 10.67L12.98 11.24L16.5 16.36H15.02L12.19 12.29Z" fill="white"/>
+                            </svg>
+                            <span>X (트위터)</span>
                         </button>
                         <button class="share-btn link" onclick="share('link')">
-                            <span>🔗</span>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                <circle cx="12" cy="12" r="11" fill="#764ba2"/>
+                                <path d="M10.5 13.5C10.875 14 11.375 14.375 12 14.5C12.625 14.625 13.25 14.5 13.75 14.125L16.25 11.625C17.125 10.75 17.125 9.375 16.25 8.5C15.375 7.625 14 7.625 13.125 8.5L12.375 9.25M13.5 10.5C13.125 10 12.625 9.625 12 9.5C11.375 9.375 10.75 9.5 10.25 9.875L7.75 12.375C6.875 13.25 6.875 14.625 7.75 15.5C8.625 16.375 10 16.375 10.875 15.5L11.625 14.75" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
                             <span>링크 복사</span>
                         </button>
                     </div>
