--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ body {
                 <span class="badge">인기 🔥</span>
             </a>
 
-            <a href="/gomoku/" class="test-card" target="_blank" rel="noopener noreferrer">
+            <a href="/omok/" class="test-card" target="_blank" rel="noopener noreferrer">
                 <div class="test-icon">⚫⚪</div>
                 <h3>오목 게임</h3>
                 <p>친구와 함께하는<br>온라인 오목 대결</p>
