--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
 <meta property="og:description" content="재미있는 심리테스트 모음">
 <meta property="og:url" content="https://share.woojuya.co.kr">
 
-<!-- Google AdSense -->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1219204287783717"
-crossorigin="anonymous"></script>
-
 <style>
 * {
     margin: 0;
@@ -56,18 +52,6 @@ body {
 .header p {
     font-size: 1.2em;
     color: #666;
-}
-
-/* 광고 영역 - 상단 */
-.ad-section {
-    margin: 30px 0;
-    padding: 20px;
-    background: #f8f9fa;
-    border-radius: 15px;
-    min-height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .test-grid {
@@ -127,18 +111,6 @@ body {
     margin-top: 10px;
 }
 
-/* 광고 영역 - 하단 */
-.ad-section-bottom {
-    margin: 50px 0 30px 0;
-    padding: 20px;
-    background: #f8f9fa;
-    border-radius: 15px;
-    min-height: 250px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .footer {
     text-align: center;
     margin-top: 40px;
@@ -169,16 +141,6 @@ body {
             <p>친구들과 함께하는 재미있는 심리테스트</p>
         </div>
 
-        <!-- 상단 광고 -->
-        <div class="ad-section">
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-1219204287783717"
-                 data-ad-slot="2267160593"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-        </div>
-
         <!-- 테스트 목록 -->
         <div class="test-grid">
             <a href="/love-test/" class="test-card" target="_blank" rel="noopener noreferrer">
@@ -188,11 +150,32 @@ body {
                 <span class="badge">인기 🔥</span>
             </a>
 
-            <a href="/omok/" class="test-card" target="_blank" rel="noopener noreferrer">
+            <a href="/gomoku/" class="test-card" target="_blank" rel="noopener noreferrer">
                 <div class="test-icon">⚫⚪</div>
                 <h3>오목 게임</h3>
                 <p>친구와 함께하는<br>온라인 오목 대결</p>
                 <span class="badge">게임</span>
+            </a>
+
+            <a href="/tetris/" class="test-card" target="_blank" rel="noopener noreferrer">
+                <div class="test-icon">🎮</div>
+                <h3>테트리스 게임</h3>
+                <p>클래식 테트리스<br>최고 점수에 도전!</p>
+                <span class="badge">게임</span>
+            </a>
+
+            <a href="/pension/" class="test-card" target="_blank" rel="noopener noreferrer">
+                <div class="test-icon">🏛️</div>
+                <h3>국민연금 정보</h3>
+                <p>2025년 신청·조회<br>수령방법 완벽 가이드</p>
+                <span class="badge">정보</span>
+            </a>
+
+            <a href="/phishing-warning/" class="test-card" target="_blank" rel="noopener noreferrer" style="background: linear-gradient(135deg, #e74c3c 0%, #c0392b 100%);">
+                <div class="test-icon">🚨</div>
+                <h3>긴급 피싱 주의</h3>
+                <p>신종 ARS 피싱<br>사기 주의보</p>
+                <span class="badge">긴급</span>
             </a>
 
             <a href="#" class="test-card coming-soon">
@@ -203,26 +186,12 @@ body {
             </a>
         </div>
 
-        <!-- 하단 광고 -->
-        <div class="ad-section-bottom">
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-1219204287783717"
-                 data-ad-slot="2267160593"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-        </div>
-
         <div class="footer">
             <p>© 2025 share.woojuya.co.kr | 재미로 즐기는 테스트</p>
         </div>
     </div>
 
     <script>
-        // 광고 로드
-        (adsbygoogle = window.adsbygoogle || []).push({});
-        (adsbygoogle = window.adsbygoogle || []).push({});
-        
         // 준비중 카드 클릭 방지
         document.querySelectorAll('.coming-soon').forEach(card => {
             card.addEventListener('click', function(e) {
