--- a/ideal-partner/index.html
+++ b/ideal-partner/index.html
@@ -6,6 +6,8 @@
     <title>찾았다 내 짝! 💘 나와 천생연분인 배우자는?</title>
     <meta property="og:title" content="찾았다 내 짝! 💘 나와 천생연분인 배우자는?" />
     <meta property="og:description" content="18가지 질문으로 알아보는 나의 이상형 연예인! 지금 바로 테스트하고 친구들과 공유해보세요!" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1219204287783717"
+     crossorigin="anonymous"></script>
     <style>
         * {
             margin: 0;
@@ -396,6 +398,12 @@
             transform: scale(1.05);
         }
 
+        .ad-container {
+            max-width: 100%;
+            margin: 20px auto;
+            text-align: center;
+        }
+
         @media (max-width: 600px) {
             .header h1 {
                 font-size: 24px;
@@ -480,6 +488,19 @@
 
             <!-- 질문 화면 -->
             <div class="question-screen">
+                <!-- 디스플레이 광고 -->
+                <div class="ad-container">
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-1219204287783717"
+                         data-ad-slot="8717146857"
+                         data-ad-format="auto"
+                         data-full-width-responsive="true"></ins>
+                    <script>
+                         (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                </div>
+                
                 <div class="progress-bar">
                     <div class="progress-fill" id="progressBar"></div>
                 </div>
@@ -1025,14 +1046,14 @@
         function shareFacebook() {
             const url = encodeURIComponent(window.location.href);
             const shareUrl = `https://www.facebook.com/sharer/sharer.php?u=${url}`;
-            window.open(shareUrl, '_blank', 'width=600,height=400');
+            window.open(shareUrl, '_self');
         }
 
         function shareTwitter() {
             const text = encodeURIComponent(`나의 천생연분 찾기! 💘 찾았다 내 짝!`);
             const url = encodeURIComponent(window.location.href);
             const shareUrl = `https://twitter.com/intent/tweet?text=${text}&url=${url}`;
-            window.open(shareUrl, '_blank', 'width=600,height=400');
+            window.open(shareUrl, '_self');
         }
 
         function copyLink() {
