--- a/ideal-partner/index.html
+++ b/ideal-partner/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>찾았다 내 짝! 💘 나와 천생연분인 배우자는?</title>
     <meta property="og:title" content="찾았다 내 짝! 💘 나와 천생연분인 배우자는?" />
-    <meta property="og:description" content="18가지 질문으로 알아보는 나의 이상형 연예인! 지금 바로 테스트하고 친구들과 공유해보세요!" />
-    <meta property="og:image" content="https://your-domain.com/images/thumbnail.jpg" />
-    <meta property="og:url" content="https://your-domain.com/" />
+    <meta property="og:description" content="간단한 질문으로 알아보는 나의 이상형 연예인! 지금 바로 테스트하고 친구들과 공유해보세요!" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/main308-ux/share/main/ideal-partner/images/thumbnail.jpg" />
+    <meta property="og:url" content="https://main308-ux.github.io/share/ideal-partner/" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1219204287783717"
      crossorigin="anonymous"></script>
     <style>
