--- a/sskcon/index.html
+++ b/sskcon/index.html
@@ -21,15 +21,17 @@
             justify-content: center;
             align-items: center;
             padding: 20px;
+            margin: 0;
         }
 
         .container {
             background: white;
             border-radius: 20px;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-            max-width: 800px;
+            max-width: 900px;
             width: 100%;
             overflow: hidden;
+            margin: 0 auto;
         }
 
         .header {
