--- a/sskcon/index.html
+++ b/sskcon/index.html
@@ -13,15 +13,16 @@
             box-sizing: border-box;
         }
 
+        html, body {
+            width: 100%;
+            height: 100%;
+        }
+
         body {
             font-family: 'Malgun Gothic', '맑은 고딕', Arial, sans-serif;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             padding: 20px;
-            margin: 0;
         }
 
         .container {
@@ -30,8 +31,8 @@
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
             max-width: 900px;
             width: 100%;
-            overflow: hidden;
             margin: 0 auto;
+            overflow: hidden;
         }
 
         .header {
@@ -131,7 +132,7 @@
             padding: 40px;
             text-align: center;
             border-radius: 15px;
-            margin-top: 30px;
+            margin-bottom: 30px;
         }
 
         .booking-section h2 {
