--- a/omok/index.html
+++ b/omok/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>오목 게임</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1219204287783717"
+     crossorigin="anonymous"></script>
     <style>
         * {
             margin: 0;
