--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>세모정 - 세상의 모든 정보</title>
+    
+    <!-- Naver Search Advisor -->
+    <meta name="naver-site-verification" content="e96a4f041fa6c6d400b6310cb22f1fa557f8064e">
+    
     <style>
         * {
             margin: 0;
