--- a/sangsaeng-payback/index.html
+++ b/sangsaeng-payback/index.html
@@ -503,12 +503,14 @@
         <p class="subtitle">카드 소비 증가분의 20%를 디지털 온누리상품권으로 환급받으세요</p>
         <span class="info-badge" role="status">🎁 최대 30만원 환급 | 신청기간: ~11.30</span>
 
+        <!-- 상단 광고 -->
         <aside class="ad-container" aria-label="광고">
             <div class="ad-label">광고</div>
+            <!-- share.woojuya.co.kr -->
             <ins class="adsbygoogle"
                  style="display:block"
                  data-ad-client="ca-pub-1219204287783717"
-                 data-ad-slot="auto"
+                 data-ad-slot="2267160593"
                  data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
             <script>
@@ -564,12 +566,14 @@
             <p>월 최대 10만원, 3개월간 최대 30만원까지 디지털 온누리상품권으로 지급됩니다. 지급일은 매월 15일입니다.</p>
         </article>
 
+        <!-- 하단 광고 -->
         <aside class="ad-container" aria-label="광고">
             <div class="ad-label">광고</div>
+            <!-- share.woojuya.co.kr -->
             <ins class="adsbygoogle"
                  style="display:block"
                  data-ad-client="ca-pub-1219204287783717"
-                 data-ad-slot="auto"
+                 data-ad-slot="2267160593"
                  data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
             <script>
