--- a/sangsaeng-payback/index.html
+++ b/sangsaeng-payback/index.html
@@ -522,7 +522,7 @@
                 <span class="btn-arrow" aria-hidden="true">→</span>
             </a>
 
-            <a href="https://www.onnuripay.co.kr/" class="btn btn-store" title="온누리상품권 가맹점 검색" aria-label="온누리상품권 가맹점 확인 페이지로 이동">
+            <a href="https://onnurigift.or.kr/online_market" class="btn btn-store" title="온누리상품권 사용처 확인" aria-label="온누리상품권 가맹점 확인 페이지로 이동">
                 <span class="btn-icon" aria-hidden="true">🏪</span>
                 <span class="btn-text">
                     <span class="btn-title">가맹점 확인하기</span>
