--- a/government-support/index.html
+++ b/government-support/index.html
@@ -21,7 +21,7 @@
     <meta property="og:url" content="https://share.woojuya.co.kr/government-support/">
     <meta property="og:title" content="대한민국 정부지원금 한눈에 보기 2025">
     <meta property="og:description" content="청년, 결혼, 출산육아, 여성, 중장년, 노인, 소상공인, 긴급지원까지 생애주기별 맞춤 복지혜택 총정리">
-    <meta property="og:image" content="https://share.woojuya.co.kr/images/og-default.jpg">
+    <meta property="og:image" content="https://share.woojuya.co.kr/government-support/government-support.jpg">
     <meta property="og:locale" content="ko_KR">
     <meta property="og:site_name" content="세모정 - 세상의 모든 정보">
     
@@ -30,7 +30,7 @@
     <meta name="twitter:url" content="https://share.woojuya.co.kr/government-support/">
     <meta name="twitter:title" content="대한민국 정부지원금 한눈에 보기 2025">
     <meta name="twitter:description" content="청년, 결혼, 출산육아, 여성, 중장년, 노인, 소상공인, 긴급지원까지 생애주기별 맞춤 복지혜택 총정리">
-    <meta name="twitter:image" content="https://share.woojuya.co.kr/images/og-default.jpg">
+    <meta name="twitter:image" content="https://share.woojuya.co.kr/government-support/government-support.jpg">
     
     <!-- Naver / Korean Search Engines -->
     <meta name="naver-site-verification" content="e96a4f041fa6c6d400b6310cb22f1fa557f8064e">
@@ -199,18 +199,18 @@
         }
 
         .btn-icon {
-            font-size: 2.5rem;
+            font-size: 2.8rem;
             margin-bottom: 5px;
         }
 
         .btn-title {
-            font-size: 1.15rem;
+            font-size: 1.25rem;
             color: #333;
             font-weight: 700;
         }
 
         .btn-desc {
-            font-size: 0.8rem;
+            font-size: 0.9rem;
             color: #888;
             font-weight: 400;
         }
@@ -292,7 +292,7 @@
         .share-buttons {
             display: flex;
             justify-content: center;
-            gap: 15px;
+            gap: 12px;
             flex-wrap: wrap;
         }
 
@@ -300,31 +300,32 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 48px;
-            height: 48px;
-            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+            border-radius: 16px;
             text-decoration: none;
             transition: all 0.3s ease;
             cursor: pointer;
             border: none;
             padding: 0;
             background: transparent;
+            overflow: hidden;
         }
 
         .share-btn img {
-            width: 48px;
-            height: 48px;
-            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+            border-radius: 16px;
             object-fit: cover;
             transition: all 0.3s ease;
         }
 
         .share-btn:hover {
-            transform: translateY(-5px) scale(1.1);
+            transform: translateY(-5px) scale(1.05);
         }
 
         .share-btn:hover img {
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
         }
 
         .sr-only {
@@ -401,20 +402,27 @@
             }
 
             .btn-icon {
-                font-size: 2.2rem;
+                font-size: 2.5rem;
             }
 
             .btn-title {
-                font-size: 1.1rem;
+                font-size: 1.2rem;
             }
 
             .btn-desc {
-                font-size: 0.78rem;
+                font-size: 0.88rem;
+            }
+
+            .share-btn {
+                width: 56px;
+                height: 56px;
+                border-radius: 14px;
             }
 
             .share-btn img {
-                width: 44px;
-                height: 44px;
+                width: 56px;
+                height: 56px;
+                border-radius: 14px;
             }
         }
 
@@ -450,7 +458,7 @@
             }
 
             .btn-icon {
-                font-size: 2.4rem;
+                font-size: 2.6rem;
                 margin-bottom: 0;
             }
 
@@ -459,12 +467,12 @@
             }
 
             .btn-title {
-                font-size: 1.15rem;
+                font-size: 1.2rem;
                 margin-bottom: 4px;
             }
 
             .btn-desc {
-                font-size: 0.85rem;
+                font-size: 0.9rem;
             }
 
             .badge {
@@ -487,12 +495,19 @@
             }
 
             .share-buttons {
-                gap: 12px;
+                gap: 10px;
+            }
+
+            .share-btn {
+                width: 52px;
+                height: 52px;
+                border-radius: 12px;
             }
 
             .share-btn img {
-                width: 42px;
-                height: 42px;
+                width: 52px;
+                height: 52px;
+                border-radius: 12px;
             }
         }
 
