--- a/government-support/index.html
+++ b/government-support/index.html
@@ -556,18 +556,65 @@
         <span class="info-badge" role="status">✨ 나에게 맞는 혜택을 찾아보세요 ✨</span>
 
         <nav class="button-container" aria-label="정부지원금 카테고리 메뉴">
-            <!-- 결혼 혜택 -->
-            <a href="https://woojuya.co.kr/marriage-benefits/" class="btn" title="결혼 혜택 자세히 보기">
-                <span class="badge badge-new">NEW</span>
-                <span class="btn-icon">💒</span>
+            <!-- 19세~34세 청년 -->
+            <a href="https://share.woojuya.co.kr/youth-support/" class="btn" title="19세~34세 청년 정부지원혜택 자세히 보기">
+                <span class="badge badge-hot">HOT</span>
+                <span class="btn-icon">🎓</span>
                 <div class="btn-content">
-                    <span class="btn-title">결혼 혜택</span>
-                    <span class="btn-desc">신혼부부 주거·자산형성 지원</span>
+                    <span class="btn-title">19세~34세 청년</span>
+                    <span class="btn-desc">취업·주거·자산형성 지원</span>
+                </div>
+            </a>
+
+            <!-- 여성전용 -->
+            <a href="https://share.woojuya.co.kr/woman-support/" class="btn" title="여성전용 정부지원혜택 자세히 보기">
+                <span class="badge badge-hot">HOT</span>
+                <span class="btn-icon">👩</span>
+                <div class="btn-content">
+                    <span class="btn-title">여성전용</span>
+                    <span class="btn-desc">건강·자립 맞춤형 지원</span>
+                </div>
+            </a>
+
+            <!-- 긴급지원 -->
+            <a href="https://share.woojuya.co.kr/emergency-support" class="btn" title="긴급지원 정부지원혜택 자세히 보기">
+                <span class="badge badge-24h">24시간</span>
+                <span class="btn-icon">🆘</span>
+                <div class="btn-content">
+                    <span class="btn-title">긴급지원</span>
+                    <span class="btn-desc">생계·의료·주거 긴급 지원</span>
+                </div>
+            </a>
+
+            <!-- 35세~64세 중장년 -->
+            <a href="https://share.woojuya.co.kr/middleaged-support" class="btn" title="35세~64세 중장년 정부지원혜택 자세히 보기">
+                <span class="btn-icon">👨‍💼</span>
+                <div class="btn-content">
+                    <span class="btn-title">35세~64세 중장년</span>
+                    <span class="btn-desc">재취업·건강·재무설계 지원</span>
+                </div>
+            </a>
+
+            <!-- 소상공인 -->
+            <a href="https://share.woojuya.co.kr/business-support" class="btn" title="소상공인 정부지원혜택 자세히 보기">
+                <span class="btn-icon">🏪</span>
+                <div class="btn-content">
+                    <span class="btn-title">소상공인</span>
+                    <span class="btn-desc">경영안정·금융·세제 지원</span>
+                </div>
+            </a>
+
+            <!-- 65세이상 어르신 -->
+            <a href="https://share.woojuya.co.kr/senior-support" class="btn" title="65세이상 어르신 정부지원혜택 자세히 보기">
+                <span class="btn-icon">👴</span>
+                <div class="btn-content">
+                    <span class="btn-title">65세이상 어르신</span>
+                    <span class="btn-desc">연금·건강·복지·교통 지원</span>
                 </div>
             </a>
 
             <!-- 임신·출산·육아 -->
-            <a href="https://woojuya.co.kr/2025-pregnancy-policy/" class="btn" title="임신·출산·육아 혜택 자세히 보기">
+            <a href="https://share.woojuya.co.kr/parenting-support" class="btn" title="임신·출산·육아 정부지원혜택 자세히 보기">
                 <span class="badge badge-hot">HOT</span>
                 <span class="btn-icon">👶</span>
                 <div class="btn-content">
@@ -576,60 +623,13 @@
                 </div>
             </a>
 
-            <!-- 여성전용 지원 -->
-            <a href="https://woojuya.co.kr/women-benefits/" class="btn" title="여성전용 지원 자세히 보기">
-                <span class="badge badge-hot">HOT</span>
-                <span class="btn-icon">👩</span>
+            <!-- 결혼·신혼부부 -->
+            <a href="https://share.woojuya.co.kr/marriage-support" class="btn" title="결혼·신혼부부 정부지원혜택 자세히 보기">
+                <span class="badge badge-new">NEW</span>
+                <span class="btn-icon">💒</span>
                 <div class="btn-content">
-                    <span class="btn-title">여성전용 지원</span>
-                    <span class="btn-desc">건강·자립 맞춤형 지원</span>
-                </div>
-            </a>
-
-            <!-- 청년 혜택 -->
-            <a href="https://woojuya.co.kr/%ec%b2%ad%eb%85%84%ed%98%9c%ed%83%9d/" class="btn" title="청년 혜택 자세히 보기">
-                <span class="badge badge-hot">HOT</span>
-                <span class="btn-icon">🎓</span>
-                <div class="btn-content">
-                    <span class="btn-title">청년 혜택</span>
-                    <span class="btn-desc">취업·주거·자산형성 지원</span>
-                </div>
-            </a>
-
-            <!-- 중장년 혜택 -->
-            <a href="https://woojuya.co.kr/2025-%ec%a4%91%ec%9e%a5%eb%85%84-3564%ec%84%b8-%ec%a0%95%eb%b6%80-%ec%a7%80%ec%9b%90-%ed%98%9c%ed%83%9d-%ec%b4%9d%ec%a0%95%eb%a6%ac/" class="btn" title="중장년 혜택 자세히 보기">
-                <span class="btn-icon">👨‍💼</span>
-                <div class="btn-content">
-                    <span class="btn-title">중장년 혜택</span>
-                    <span class="btn-desc">재취업·건강·재무설계 지원</span>
-                </div>
-            </a>
-
-            <!-- 노인 혜택 -->
-            <a href="https://woojuya.co.kr/%eb%85%b8%ec%9d%b8%ed%98%9c%ed%83%9d/" class="btn" title="노인 혜택 자세히 보기">
-                <span class="btn-icon">👴</span>
-                <div class="btn-content">
-                    <span class="btn-title">노인 혜택</span>
-                    <span class="btn-desc">연금·건강·복지·교통 지원</span>
-                </div>
-            </a>
-
-            <!-- 소상공인 -->
-            <a href="https://woojuya.co.kr/2025-%ec%86%8c%ec%83%81%ea%b3%b5%ec%9d%b8-%ec%a0%95%eb%b6%80-%ec%a7%80%ec%9b%90-%ec%a0%95%ec%b1%85-%ec%b5%9c%ec%8b%a0-%eb%aa%a8%ec%9d%8c/" class="btn" title="소상공인 지원 자세히 보기">
-                <span class="btn-icon">🏪</span>
-                <div class="btn-content">
-                    <span class="btn-title">소상공인</span>
-                    <span class="btn-desc">경영안정·금융·세제 지원</span>
-                </div>
-            </a>
-
-            <!-- 긴급지원 -->
-            <a href="https://woojuya.co.kr/emergency-assistance/" class="btn" title="긴급지원 자세히 보기">
-                <span class="badge badge-24h">24시간</span>
-                <span class="btn-icon">🆘</span>
-                <div class="btn-content">
-                    <span class="btn-title">긴급지원</span>
-                    <span class="btn-desc">생계·의료·주거 긴급 지원</span>
+                    <span class="btn-title">결혼·신혼부부</span>
+                    <span class="btn-desc">주거·자산형성 지원</span>
                 </div>
             </a>
         </nav>
