--- a/middleaged-support/index.html
+++ b/middleaged-support/index.html
@@ -254,7 +254,7 @@
 
     <div style="background: linear-gradient(135deg, #667eea, #764ba2); padding: 20px; margin: 0 40px 30px 40px; border-radius: 15px; text-align: center; box-shadow: 0 5px 20px rgba(0, 0, 0, 0.15);">
         <p style="font-size: 1.15rem; color: #ffffff; font-weight: bold; margin: 0; line-height: 1.6;">
-            📧 정책머니의 정부지원금 알림 구독서비스 신청은<br>정책머니 메일 wonderjh86@gmail.com로 해주세요! 📧
+            📧 정책머니의 정부지원금 알림 구독서비스 신청은<br>정책머니 메일 main308a@naver.com로 해주세요! 📧
         </p>
     </div>
 
@@ -618,7 +618,7 @@
         
         <div style="background: linear-gradient(135deg, #667eea, #764ba2); padding: 20px; margin: 40px 40px 0 40px; border-radius: 15px; text-align: center; box-shadow: 0 5px 20px rgba(0, 0, 0, 0.15);">
             <p style="font-size: 1.15rem; color: #ffffff; font-weight: bold; margin: 0; line-height: 1.6;">
-                📧 정책머니의 정부지원금 알림 구독서비스 신청은<br>정책머니 메일 wonderjh86@gmail.com로 해주세요! 📧
+                📧 정책머니의 정부지원금 알림 구독서비스 신청은<br>정책머니 메일 main308a@naver.com로 해주세요! 📧
             </p>
         </div>
     </div>
