--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
             }
         ]
     }
-       
+    </script>
+    
     <style>
         * {
             margin: 0;
@@ -663,30 +664,18 @@
             </div>
         </section>
 
-        <!-- 하단 광고 -->
-        <aside class="ad-container" aria-label="광고">
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-1219204287783717"
-                 data-ad-slot="2267160593"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-            <script>
-                 (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-        </aside>
 
         <footer role="contentinfo">
             <p>💰 똑똑하게 돈 관리하는 정책머니와 함께하세요 💰</p>
             <p style="margin-top: 10px;">© 2025 정책머니</p>
-            <p style="margin-top: 10px;">문의: <a href="mailto:main308a@naver.com">main308a@naver.com</a></p>
+            <p style="margin-top: 10px;">문의: <a href="/cdn-cgi/l/email-protection#ea878b8384d9dad28baa848b9c8f98c4898587"><span class="__cf_email__" data-cfemail="563b373f3865666e371638372033247835393b">[email&#160;protected]</span></a></p>
         </footer>
     </main>
 
     <!-- 토스트 메시지 -->
     <div id="toast" class="toast">링크가 복사되었습니다!</div>
 
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         const pageUrl = 'https://share.woojuya.co.kr/government-support/';
         const pageTitle = '정책머니 - 대한민국 정부지원금 한눈에 보기';
         const pageDesc = '청년, 결혼, 출산육아, 노인, 소상공인 등 맞춤형 복지혜택 총정리 💰';
@@ -773,12 +762,4 @@
         // 토스트 메시지 표시
         function showToast(message) {
             const toast = document.getElementById('toast');
-            toast.textContent = message || '링크가 복사되었습니다!';
-            toast.classList.add('show');
-            setTimeout(() => {
-                toast.classList.remove('show');
-            }, 2500);
-        }
-    </script>
-</body>
-</html>
+            toast.textConte
